# oslayer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile.am  README.md  build.sh  config.h.in  configure.ac  oslayer.pc.in
examples/: FileListTest.cpp  FileTest.cpp  Makefile.am  MeasurementTest.cpp  MemoryManagementTest.cpp  PropertiesTest.cpp  TextTest.cpp  ThreadPoolTest.cpp  Timer.cpp  TrimTest.cpp  app.cpp  args.cpp  autoReleaseTest.cpp  base64Test.cpp  basic.cpp  datagramsocketTest.cpp  dateTest.cpp  echo-server.cpp  fileReadWrite.cpp  hashTest.cpp  libTest.cpp  logTest.cpp  logger.cpp  loggerTest.cpp  main.cpp  multicast.cpp  multicastTest.cpp  networkInfo.cpp  polling.cpp  pollingTest.cpp  randomAcessFileTest.cpp  repl.cpp  secureSocketTest.cpp  sharedSelectorModel.cpp  socketTest.cpp  stringElementTest.cpp  trycatch.cpp  udpclient.cpp  xmlEncodeDecodeTest.cpp  xmlParserTest.cpp
examples/res/: sample.properties
ext/: Makefile.am  mysql-connector.cpp
liboslayer/: ArgumentParser.cpp  ArgumentParser.hpp  Arguments.cpp  Arguments.hpp  AutoLock.cpp  AutoLock.hpp  AutoRef.cpp  AutoRef.hpp  AutoRelease.hpp  Base64.cpp  Base64.hpp  ByteArray.cpp  ByteArray.hpp  ByteBuffer.cpp  ByteBuffer.hpp  Condition.hpp  CountDownLatch.cpp  CountDownLatch.hpp  DatabaseConnection.cpp  DatabaseConnection.hpp  DatabaseDriver.cpp  DatabaseDriver.hpp  DatagramSocket.cpp  DatagramSocket.hpp  Date.cpp  Date.hpp  Endian.cpp  Endian.hpp  Environment.cpp  Environment.hpp  Event.cpp  Event.hpp  File.cpp  File.hpp  FileReaderWriter.cpp  FileReaderWriter.hpp  FileStream.cpp  FileStream.hpp  Hash.hpp  Heap.hpp  (+79 more)
tests/: Makefile.am  test-argument-parser.cpp  test-arguments.cpp  test-autolock.cpp  test-base64.cpp  test-bytearray.cpp  test-bytebuffer.cpp  test-count-down-latch.cpp  test-database-connection.cpp  test-datagramsocket.cpp  test-date.cpp  test-echo-server-client.cpp  test-environment.cpp  test-event.cpp  test-exception.cpp  test-file-stream.cpp  test-file.cpp  test-heap.cpp  test-hello.cpp  test-iterator.cpp  test-library.cpp  test-lifetime.cpp  test-lisp.cpp  test-logger.cpp  test-message-queue.cpp  test-mysqlclient-database-connector.cpp  test-network.cpp  test-observer-pattern.cpp  test-optional.cpp  test-os.cpp  test-process.cpp  test-properties.cpp  test-property-map.cpp  test-random.cpp  test-ref.cpp  test-regex.cpp  test-register.cpp  test-secure-socket.cpp  test-socket.cpp  test-string-element.cpp  (+12 more)
tests/data/: Makefile.am  cert.pem  hello.c  key.pem
win32/: Local.testsettings  TraceAndTestImpact.testsettings  oslayer.sln  oslayer.vcxproj  oslayer.vcxproj.filters  oslayer.vsmdi
win32/TestProject1/: AssemblyInfo.cpp  TestProject1.vcxproj  TestProject1.vcxproj.filters  UnitTest1.cpp  app.rc  stdafx.cpp
win32/UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters  test2.cpp  unittest1.cpp
win32/libhello/: hello.c  hello.h  libhello.vcxproj  libhello.vcxproj.filters
win32/sample/: main.cpp  sample.vcxproj  sample.vcxproj.filters
win32/sample/res/: config.properties
xcode/mysql-connector/mysql-connector/: mysql_connector.h  mysql_connector.m
xcode/mysql-connector/mysql-connector.xcodeproj/: project.pbxproj
xcode/mysql-connector/mysql-connector.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/oslayer sample/oslayer sample/: main.m
xcode/oslayer sample/oslayer sample.xcodeproj/: project.pbxproj
xcode/oslayer sample/oslayer sample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/oslayer-console/oslayer-console.xcodeproj/: project.pbxproj
xcode/oslayer-console/oslayer-console.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/oslayer-console/oslayer-tests/: oslayer_tests.m
xcode/oslayer/oslayer/: OSSocket.mm  OSThread.mm  oslayer.h  oslayer.mm
xcode/oslayer/oslayer.xcodeproj/: project.pbxproj
xcode/oslayer/oslayer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/oslayer/oslayer.xcodeproj/project.xcworkspace/xcuserdata/bjtj.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/oslayer/oslayer.xcodeproj/xcuserdata/bjtj.xcuserdatad/xcschemes/: oslayer.xcscheme  xcschememanagement.plist
