noinst_PROGRAMS=main udpclient ThreadPoolTest networkInfo datagramSocketTest socketTest multicastTest secureSocketTest

main_SOURCES=main.cpp
main_CPPFLAGS=-I$(top_srcdir)
main_CXXFLAGS=$(PTHREAD_CXXFLAGS)
main_LDFLAGS=$(PTHREAD_CFLAGS)
main_LDADD=../liboslayer/liboslayer.la

udpclient_SOURCES=udpclient.cpp
udpclient_CPPFLAGS=-I$(top_srcdir)
udpclient_CXXFLAGS=$(PTHREAD_CXXFLAGS)
udpclient_LDFLAGS=$(PTHREAD_CFLAGS)
udpclient_LDADD=../liboslayer/liboslayer.la

ThreadPoolTest_SOURCES=ThreadPoolTest.cpp
ThreadPoolTest_CPPFLAGS=-I$(top_srcdir)
ThreadPoolTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
ThreadPoolTest_LDFLAGS=$(PTHREAD_CFLAGS)
ThreadPoolTest_LDADD=../liboslayer/liboslayer.la

networkInfo_SOURCES=networkInfo.cpp
networkInfo_CPPFLAGS=-I$(top_srcdir)
networkInfo_CXXFLAGS=$(PTHREAD_CXXFLAGS)
networkInfo_LDFLAGS=$(PTHREAD_CFLAGS)
networkInfo_LDADD=../liboslayer/liboslayer.la

datagramSocketTest_SOURCES=datagramsocketTest.cpp
datagramSocketTest_CPPFLAGS=-I$(top_srcdir)
datagramSocketTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
datagramSocketTest_LDFLAGS=$(PTHREAD_CFLAGS)
datagramSocketTest_LDADD=../liboslayer/liboslayer.la

socketTest_SOURCES=socketTest.cpp
socketTest_CPPFLAGS=-I$(top_srcdir)
socketTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
socketTest_LDFLAGS=$(PTHREAD_CFLAGS)
socketTest_LDADD=../liboslayer/liboslayer.la

# _SOURCES=.cpp
# _CPPFLAGS=-I$(top_srcdir)
# _CXXFLAGS=$(PTHREAD_CXXFLAGS)
# _LDFLAGS=$(PTHREAD_CFLAGS)
# _LDADD=../liboslayer/liboslayer.la

multicastTest_SOURCES=multicastTest.cpp
multicastTest_CPPFLAGS=-I$(top_srcdir)
multicastTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
multicastTest_LDFLAGS=$(PTHREAD_CFLAGS)
multicastTest_LDADD=../liboslayer/liboslayer.la

secureSocketTest_SOURCES=secureSocketTest.cpp
secureSocketTest_CPPFLAGS=-I$(top_srcdir)
secureSocketTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
secureSocketTest_LDFLAGS=$(PTHREAD_CFLAGS)
secureSocketTest_LDADD=../liboslayer/liboslayer.la
