noinst_PROGRAMS=main udpclient ThreadPoolTest networkInfo datagramSocketTest socketTest multicastTest secureSocketTest repl libTest xmlParserTest xmlEncodeDecodeTest randomAcessFileTest hashTest base64Test timer

main_SOURCES=main.cpp
main_CPPFLAGS=-I$(top_srcdir)
main_CXXFLAGS=$(PTHREAD_CXXFLAGS)
main_LDFLAGS=$(PTHREAD_CFLAGS)
main_LDADD=../liboslayer/liboslayer.la

udpclient_SOURCES=udpclient.cpp
udpclient_CPPFLAGS=-I$(top_srcdir)
udpclient_CXXFLAGS=$(PTHREAD_CXXFLAGS)
udpclient_LDFLAGS=$(PTHREAD_CFLAGS)
udpclient_LDADD=../liboslayer/liboslayer.la

ThreadPoolTest_SOURCES=ThreadPoolTest.cpp
ThreadPoolTest_CPPFLAGS=-I$(top_srcdir)
ThreadPoolTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
ThreadPoolTest_LDFLAGS=$(PTHREAD_CFLAGS)
ThreadPoolTest_LDADD=../liboslayer/liboslayer.la

networkInfo_SOURCES=networkInfo.cpp
networkInfo_CPPFLAGS=-I$(top_srcdir)
networkInfo_CXXFLAGS=$(PTHREAD_CXXFLAGS)
networkInfo_LDFLAGS=$(PTHREAD_CFLAGS)
networkInfo_LDADD=../liboslayer/liboslayer.la

datagramSocketTest_SOURCES=datagramsocketTest.cpp
datagramSocketTest_CPPFLAGS=-I$(top_srcdir)
datagramSocketTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
datagramSocketTest_LDFLAGS=$(PTHREAD_CFLAGS)
datagramSocketTest_LDADD=../liboslayer/liboslayer.la

socketTest_SOURCES=socketTest.cpp
socketTest_CPPFLAGS=-I$(top_srcdir)
socketTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
socketTest_LDFLAGS=$(PTHREAD_CFLAGS)
socketTest_LDADD=../liboslayer/liboslayer.la

multicastTest_SOURCES=multicastTest.cpp
multicastTest_CPPFLAGS=-I$(top_srcdir)
multicastTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
multicastTest_LDFLAGS=$(PTHREAD_CFLAGS)
multicastTest_LDADD=../liboslayer/liboslayer.la

secureSocketTest_SOURCES=secureSocketTest.cpp
secureSocketTest_CPPFLAGS=-I$(top_srcdir)
secureSocketTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
secureSocketTest_LDFLAGS=$(PTHREAD_CFLAGS)
secureSocketTest_LDADD=../liboslayer/liboslayer.la

repl_SOURCES=repl.cpp
repl_CPPFLAGS=-I$(top_srcdir)
repl_CXXFLAGS=$(PTHREAD_CXXFLAGS)
repl_LDFLAGS=$(PTHREAD_CFLAGS)
repl_LDADD=../liboslayer/liboslayer.la

libTest_SOURCES=libTest.cpp
libTest_CPPFLAGS=-I$(top_srcdir)
libTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
libTest_LDFLAGS=$(PTHREAD_CFLAGS)
libTest_LDADD=../liboslayer/liboslayer.la

xmlParserTest_SOURCES=xmlParserTest.cpp
xmlParserTest_CPPFLAGS=-I$(top_srcdir)
xmlParserTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
xmlParserTest_LDFLAGS=$(PTHREAD_CFLAGS)
xmlParserTest_LDADD=../liboslayer/liboslayer.la

xmlEncodeDecodeTest_SOURCES=xmlEncodeDecodeTest.cpp
xmlEncodeDecodeTest_CPPFLAGS=-I$(top_srcdir)
xmlEncodeDecodeTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
xmlEncodeDecodeTest_LDFLAGS=$(PTHREAD_CFLAGS)
xmlEncodeDecodeTest_LDADD=../liboslayer/liboslayer.la

randomAcessFileTest_SOURCES=randomAcessFileTest.cpp
randomAcessFileTest_CPPFLAGS=-I$(top_srcdir)
randomAcessFileTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
randomAcessFileTest_LDFLAGS=$(PTHREAD_CFLAGS)
randomAcessFileTest_LDADD=../liboslayer/liboslayer.la

hashTest_SOURCES=hashTest.cpp
hashTest_CPPFLAGS=-I$(top_srcdir)
hashTest_CXXFLAGS=$(PTHREAD_CXXFLAGS)
hashTest_LDFLAGS=$(PTHREAD_CFLAGS)
hashTest_LDADD=../liboslayer/liboslayer.la

base64Test_SOURCES=base64Test.cpp
base64Test_CPPFLAGS=-I$(top_srcdir)
base64Test_CXXFLAGS=$(PTHREAD_CXXFLAGS)
base64Test_LDFLAGS=$(PTHREAD_CFLAGS)
base64Test_LDADD=../liboslayer/liboslayer.la

timer_SOURCES=Timer.cpp
timer_CPPFLAGS=-I$(top_srcdir)
timer_CXXFLAGS=$(PTHREAD_CXXFLAGS)
timer_LDFLAGS=$(PTHREAD_CFLAGS)
timer_LDADD=../liboslayer/liboslayer.la
