lib_LTLIBRARIES = liboslayer.la

liboslayerincdir=${includedir}/liboslayer
liboslayerinc_HEADERS= \
	ArgumentParser.hpp \
	AutoRef.hpp \
	AutoRelease.hpp \
	Base64.hpp \
	ByteArray.hpp \
	Condition.hpp \
	CountDownLatch.hpp \
	DatabaseConnection.hpp \
	DatagramSocket.hpp \
	Date.hpp \
	Endian.hpp \
	File.hpp \
	FileStream.hpp \
	Hash.hpp \
	Heap.hpp \
	Iterator.hpp \
	Library.hpp \
	Lifetime.hpp \
	Lisp.hpp \
	Logger.hpp \
	MessageQueue.hpp \
	Network.hpp \
	Object.hpp \
	Observer.hpp \
	Process.hpp \
	Properties.hpp \
	PropertyMap.hpp \
	Random.hpp \
	Ref.hpp \
	Regex.hpp \
	Register.hpp \
	SecureSocket.hpp \
	Selector.hpp \
	Socket.hpp \
	SocketApi.hpp \
	StringElements.hpp \
	Task.hpp \
	TaskThreadPool.hpp \
	TestSuite.hpp \
	Text.hpp \
	ThreadPool.hpp \
	Timer.hpp \
	Tree.hpp \
	Utils.hpp \
	Uuid.hpp \
	XmlEncoderDecoder.hpp \
	XmlParser.hpp \
	os.hpp \
	platform.hpp

liboslayer_la_SOURCES= \
	ArgumentParser.cpp \
	ArgumentParser.hpp \
	AutoRef.cpp \
	AutoRef.hpp \
	AutoRelease.hpp \
	Base64.cpp \
	Base64.hpp \
	ByteArray.cpp \
	ByteArray.hpp \
	Condition.hpp \
	CountDownLatch.cpp \
	CountDownLatch.hpp \
	DatabaseConnection.cpp \
	DatabaseConnection.hpp \
	DatagramSocket.cpp \
	DatagramSocket.hpp \
	Date.cpp \
	Date.hpp \
	Endian.cpp \
	Endian.hpp \
	File.cpp \
	File.hpp \
	FileStream.cpp \
	FileStream.hpp \
	Hash.hpp \
	Heap.hpp \
	Iterator.hpp \
	Library.cpp \
	Library.hpp \
	Lifetime.hpp \
	Lisp.cpp \
	Lisp.hpp \
	Logger.cpp \
	Logger.hpp \
	MessageQueue.hpp \
	Network.cpp \
	Network.hpp \
	Object.hpp \
	Observer.cpp \
	Observer.hpp \
	Process.cpp \
	Process.hpp \
	Properties.cpp \
	Properties.hpp \
	PropertyMap.hpp \
	Random.cpp \
	Random.hpp \
	Ref.hpp \
	Regex.cpp \
	Regex.hpp \
	Register.hpp \
	SecureSocket.cpp \
	SecureSocket.hpp \
	Selector.cpp \
	Selector.hpp \
	Socket.cpp \
	Socket.hpp \
	SocketApi.cpp \
	SocketApi.hpp \
	StringElements.cpp \
	StringElements.hpp \
	Task.hpp \
	TaskThreadPool.cpp \
	TaskThreadPool.hpp \
	TestSuite.cpp \
	TestSuite.hpp \
	Text.cpp \
	Text.hpp \
	ThreadPool.cpp \
	ThreadPool.hpp \
	Timer.cpp \
	Timer.hpp \
	Tree.cpp \
	Tree.hpp \
	Utils.hpp \
	Uuid.cpp \
	Uuid.hpp \
	XmlEncoderDecoder.hpp \
	XmlParser.hpp \
	os.cpp \
	os.hpp \
	platform.hpp

liboslayer_la_CXXFLAGS=$(PTHREAD_CXXFLAGS)
liboslayer_la_LDFLAGS=$(PTHREAD_CFLAGS)
